@@ -12,7 +12,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.UncheckedIOException;
 import java.net.URI;
-import java.net.URL;
 import java.net.URLConnection;
 import java.net.http.HttpClient;
 import java.net.http.HttpHeaders;
@@ -44,23 +43,21 @@ import org.slf4j.LoggerFactory;
  * changes.
  * <p>
  * For example:
- *
- * <pre>
- * {@code
+ * {@snippet :
  * Downloader.create(PlanetilerConfig.defaults())
  *   .add("natural_earth", "http://url/of/natural_earth.zip", Path.of("natural_earth.zip"))
  *   .add("osm", "http://url/of/file.osm.pbf", Path.of("file.osm.pbf"))
  *   .run();
  * }
- * </pre>
  * <p>
  * As a shortcut to find the URL of a file to download from the <a href="https://download.geofabrik.de/">Geofabrik
  * download site</a>, you can use "geofabrik:extract name" (i.e. "geofabrik:monaco" or "geofabrik:australia") to look up
  * a {@code .osm.pbf} download URL in the <a href="https://download.geofabrik.de/technical.html">Geofabrik JSON
  * index</a>.
  * <p>
- * You can also use "aws:latest" to download the latest {@code planet.osm.pbf} file from the
- * <a href="https://registry.opendata.aws/osm/">AWS Open Data Registry</a>.
+ * Use "aws:latest" to download the latest {@code planet.osm.pbf} file from the
+ * <a href="https://registry.opendata.aws/osm/">AWS Open Data Registry</a>, or "overture:latest" to download the latest
+ * <a href="https://overturemaps.org/">Overture Maps Foundation</a> release.
  */
 @SuppressWarnings("UnusedReturnValue")
 public class Downloader {
@@ -98,7 +95,7 @@ public class Downloader {
   }
 
   private static URLConnection getUrlConnection(String urlString, PlanetilerConfig config) throws IOException {
-    var url = new URL(urlString);
+    var url = URI.create(urlString).toURL();
     var connection = url.openConnection();
     connection.setConnectTimeout((int) config.httpTimeout().toMillis());
     connection.setReadTimeout((int) config.httpTimeout().toMillis());
@@ -140,10 +137,10 @@ public class Downloader {
    * {@code HEAD} request to the resource.
    *
    * @param id     short name to use for this download when logging progress
-   * @param url    the external resource to fetch, "aws:latest" (for the latest planet .osm.pbf), or "geofabrik:extract
-   *               name" as a shortcut to use {@link Geofabrik#getDownloadUrl(String, PlanetilerConfig)} to look up a
-   *               {@code .osm.pbf} <a href="https://download.geofabrik.de/">Geofabrik</a> extract URL by partial match
-   *               on area name
+   * @param url    the external resource to fetch, "aws:latest" (for the latest planet .osm.pbf), "overture:latest" (for
+   *               the latest Overture Maps release) or "geofabrik:extract-name" as a shortcut to use
+   *               {@link Geofabrik#getDownloadUrl(String, PlanetilerConfig)} to look up a {@code .osm.pbf}
+   *               <a href="https://download.geofabrik.de/">Geofabrik</a> extract URL by partial match on area name
    * @param output where to download the file to
    * @return {@code this} for chaining
    */
@@ -151,7 +148,9 @@ public class Downloader {
     if (url.startsWith("geofabrik:")) {
       url = Geofabrik.getDownloadUrl(url.replaceFirst("^geofabrik:", ""), config);
     } else if (url.startsWith("aws:")) {
-      url = AwsOsm.getDownloadUrl(url.replaceFirst("^aws:", ""), config);
+      url = AwsOsm.OSM_PDS.getDownloadUrl(url.replaceFirst("^aws:", ""), config);
+    } else if (url.startsWith("overture:")) {
+      url = AwsOsm.OVERTURE.getDownloadUrl(url.replaceFirst("^overture:", ""), config);
     }
     toDownloadList.add(new ResourceToDownload(id, url, output));
     return this;
@@ -245,7 +244,7 @@ public class Downloader {
 
   CompletableFuture<ResourceMetadata> httpHead(String url) {
     return client
-      .sendAsync(newHttpRequest(url).method("HEAD", HttpRequest.BodyPublishers.noBody()).build(),
+      .sendAsync(newHttpRequest(url).HEAD().build(),
         responseInfo -> {
           int status = responseInfo.statusCode();
           Optional<String> location = Optional.empty();
