@@ -3,8 +3,13 @@ package com.onthegomap.planetiler;
 import static com.onthegomap.planetiler.TestUtils.*;
 import static org.junit.jupiter.api.Assertions.*;
 
+import com.fasterxml.jackson.dataformat.csv.CsvMapper;
+import com.fasterxml.jackson.dataformat.csv.CsvSchema;
+import com.onthegomap.planetiler.archive.ReadableTileArchive;
+import com.onthegomap.planetiler.archive.TileArchiveConfig;
 import com.onthegomap.planetiler.archive.TileArchiveMetadata;
 import com.onthegomap.planetiler.archive.TileArchiveWriter;
+import com.onthegomap.planetiler.archive.TileCompression;
 import com.onthegomap.planetiler.collection.FeatureGroup;
 import com.onthegomap.planetiler.collection.LongLongMap;
 import com.onthegomap.planetiler.collection.LongLongMultimap;
@@ -15,6 +20,7 @@ import com.onthegomap.planetiler.geo.GeometryException;
 import com.onthegomap.planetiler.geo.TileCoord;
 import com.onthegomap.planetiler.geo.TileOrder;
 import com.onthegomap.planetiler.mbtiles.Mbtiles;
+import com.onthegomap.planetiler.pmtiles.ReadablePmtiles;
 import com.onthegomap.planetiler.reader.SimpleFeature;
 import com.onthegomap.planetiler.reader.SimpleReader;
 import com.onthegomap.planetiler.reader.SourceFeature;
@@ -24,8 +30,12 @@ import com.onthegomap.planetiler.reader.osm.OsmElement;
 import com.onthegomap.planetiler.reader.osm.OsmReader;
 import com.onthegomap.planetiler.reader.osm.OsmRelationInfo;
 import com.onthegomap.planetiler.stats.Stats;
+import com.onthegomap.planetiler.stream.InMemoryStreamArchive;
 import com.onthegomap.planetiler.util.BuildInfo;
+import com.onthegomap.planetiler.util.Gzip;
+import com.onthegomap.planetiler.util.TileSizeStats;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -34,6 +44,7 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.CopyOnWriteArrayList;
@@ -41,6 +52,7 @@ import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.DoubleStream;
+import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -49,6 +61,7 @@ import org.junit.jupiter.params.provider.ValueSource;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.MultiPolygon;
+import org.locationtech.jts.geom.Point;
 import org.locationtech.jts.geom.Polygon;
 import org.locationtech.jts.io.InputStreamInStream;
 import org.locationtech.jts.io.WKBReader;
@@ -73,6 +86,7 @@ class PlanetilerTests {
   private static final int Z13_TILES = 1 << 13;
   private static final double Z13_WIDTH = 1d / Z13_TILES;
   private static final int Z12_TILES = 1 << 12;
+  private static final double Z12_WIDTH = 1d / Z12_TILES;
   private static final int Z4_TILES = 1 << 4;
   private static final Polygon WORLD_POLYGON = newPolygon(
     worldCoordinateList(
@@ -138,17 +152,16 @@ class PlanetilerTests {
     Profile profile
   ) throws Exception {
     PlanetilerConfig config = PlanetilerConfig.from(Arguments.of(args));
-    FeatureGroup featureGroup = FeatureGroup.newInMemoryFeatureGroup(TileOrder.TMS, profile, stats);
+    FeatureGroup featureGroup = FeatureGroup.newInMemoryFeatureGroup(TileOrder.TMS, profile, config, stats);
     runner.run(featureGroup, profile, config);
     featureGroup.prepare();
-    try (Mbtiles db = Mbtiles.newInMemoryDatabase(config.compactDb())) {
-      TileArchiveWriter.writeOutput(featureGroup, db, () -> 0L, new TileArchiveMetadata(profile, config.arguments()),
-        config,
-        stats);
+    try (Mbtiles db = Mbtiles.newInMemoryDatabase(config.arguments())) {
+      TileArchiveWriter.writeOutput(featureGroup, db, () -> 0L, new TileArchiveMetadata(profile, config),
+        null, config, stats);
       var tileMap = TestUtils.getTileMap(db);
       tileMap.values().forEach(fs -> fs.forEach(f -> f.geometry().validate()));
-      int tileDataCount = config.compactDb() ? TestUtils.getTilesDataCount(db) : 0;
-      return new PlanetilerResults(tileMap, db.metadata().getAll(), tileDataCount);
+      int tileDataCount = db.compactDb() ? TestUtils.getTilesDataCount(db) : 0;
+      return new PlanetilerResults(tileMap, db.metadata().toMap(), tileDataCount);
     }
   }
 
@@ -248,20 +261,15 @@ class PlanetilerTests {
       "format", "pbf",
       "minzoom", "0",
       "maxzoom", "14",
-      "center", "0,0,0",
+      "center", "0,0",
       "bounds", "-180,-85.05113,180,85.05113"
     ), results.metadata);
     assertSubmap(Map.of(
       "planetiler:version", BuildInfo.get().version()
     ), results.metadata);
     assertSameJson(
-      """
-        {
-          "vector_layers": [
-          ]
-        }
-        """,
-      results.metadata.get("json")
+      "[]",
+      results.metadata.get("vector_layers")
     );
   }
 
@@ -269,11 +277,11 @@ class PlanetilerTests {
   void testOverrideMetadata() throws Exception {
     var results = runWithReaderFeatures(
       Map.of(
-        "mbtiles_name", "override_name",
-        "mbtiles_description", "override_description",
-        "mbtiles_attribution", "override_attribution",
-        "mbtiles_version", "override_version",
-        "mbtiles_type", "override_type"
+        "archive_name", "override_name",
+        "archive_description", "override_description",
+        "archive_attribution", "override_attribution",
+        "archive_version", "override_version",
+        "archive_type", "override_type"
       ),
       List.of(),
       (sourceFeature, features) -> {
@@ -331,13 +339,11 @@ class PlanetilerTests {
     ), results.tiles);
     assertSameJson(
       """
-        {
-          "vector_layers": [
-            {"id": "layer", "fields": {"name": "String", "attr": "String"}, "minzoom": 13, "maxzoom": 15}
-          ]
-        }
+        [
+          {"id": "layer", "fields": {"name": "String", "attr": "String"}, "minzoom": 13, "maxzoom": 15}
+        ]
         """,
-      results.metadata.get("json")
+      results.metadata.get("vector_layers")
     );
   }
 
@@ -466,6 +472,33 @@ class PlanetilerTests {
   }
 
   @Test
+  void testLineStringDegenerateWhenUnscaled() throws Exception {
+    double x1 = 0.5 + Z12_WIDTH / 2;
+    double y1 = 0.5 + Z12_WIDTH / 2;
+    double x2 = x1 + Z12_WIDTH / 4096 / 3;
+    double y2 = y1 + Z12_WIDTH / 4096 / 3;
+    double lat1 = GeoUtils.getWorldLat(y1);
+    double lng1 = GeoUtils.getWorldLon(x1);
+    double lat2 = GeoUtils.getWorldLat(y2);
+    double lng2 = GeoUtils.getWorldLon(x2);
+
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1"),
+      List.of(
+        newReaderFeature(newLineString(lng1, lat1, lng2, lat2), Map.of(
+          "attr", "value"
+        ))
+      ),
+      (in, features) -> features.line("layer")
+        .setZoomRange(12, 12)
+        .setMinPixelSize(0)
+        .setBufferPixels(4)
+    );
+
+    assertSubmap(Map.of(), results.tiles);
+  }
+
+  @Test
   void testNumPointsAttr() throws Exception {
     double x1 = 0.5 + Z14_WIDTH / 2;
     double y1 = 0.5 + Z14_WIDTH / 2 - Z14_WIDTH / 2;
@@ -561,6 +594,13 @@ class PlanetilerTests {
 
   public List<Coordinate> z14CoordinatePixelList(double... coords) {
     return z14CoordinateList(DoubleStream.of(coords).map(c -> c / 256d).toArray());
+  }
+
+  public Point z14Point(double x, double y) {
+    return newPoint(
+      GeoUtils.getWorldLon(0.5 + x * Z14_WIDTH / 256),
+      GeoUtils.getWorldLat(0.5 + y * Z14_WIDTH / 256)
+    );
   }
 
   @Test
@@ -741,12 +781,13 @@ class PlanetilerTests {
   @CsvSource({
     "chesapeake.wkb, 4076",
     "mdshore.wkb,    19904",
-    "njshore.wkb,    10571"
+    "njshore.wkb,    10571",
+    "kobroor.wkb,    21693"
   })
   void testComplexShorelinePolygons__TAKES_A_MINUTE_OR_TWO(String fileName, int expected)
     throws Exception {
     LOGGER.warn("Testing complex shoreline processing for " + fileName + " ...");
-    MultiPolygon geometry = (MultiPolygon) new WKBReader()
+    Geometry geometry = new WKBReader()
       .read(new InputStreamInStream(Files.newInputStream(TestUtils.pathToResource(fileName))));
     assertNotNull(geometry);
 
@@ -786,7 +827,7 @@ class PlanetilerTests {
 
     var tileContents = results.tiles.get(TileCoord.ofXYZ(0, 0, 0));
     assertEquals(1, tileContents.size());
-    Geometry geom = tileContents.get(0).geometry().geom();
+    Geometry geom = tileContents.getFirst().geometry().geom();
     assertTrue(geom instanceof MultiPolygon, geom.toString());
     MultiPolygon multiPolygon = (MultiPolygon) geom;
     assertSameNormalizedFeature(newPolygon(
@@ -1199,8 +1240,9 @@ class PlanetilerTests {
     ), results.tiles);
   }
 
-  @Test
-  void testMergeLineStrings() throws Exception {
+  @ParameterizedTest
+  @ValueSource(booleans = {false, true})
+  void testMergeLineStrings(boolean connectEndpoints) throws Exception {
     double y = 0.5 + Z15_WIDTH / 2;
     double lat = GeoUtils.getWorldLat(y);
 
@@ -1232,7 +1274,9 @@ class PlanetilerTests {
         .setMinZoom(13)
         .setAttrWithMinzoom("z14attr", in.getTag("other"), 14)
         .inheritAttrFromSource("group"),
-      (layer, zoom, items) -> FeatureMerge.mergeLineStrings(items, 0, 0, 0)
+      (layer, zoom, items) -> connectEndpoints ?
+        FeatureMerge.mergeLineStrings(items, 0, 0, 0) :
+        FeatureMerge.mergeMultiLineString(items)
     );
 
     assertSubmap(sortListValues(Map.of(
@@ -1246,9 +1290,15 @@ class PlanetilerTests {
         feature(newLineString(37, 64, 42, 64), Map.of("group", "1", "z14attr", "2")),
         feature(newLineString(42, 64, 47, 64), Map.of("group", "2", "z14attr", "3"))
       ),
-      TileCoord.ofXYZ(Z13_TILES / 2, Z13_TILES / 2, 13), List.of(
+      TileCoord.ofXYZ(Z13_TILES / 2, Z13_TILES / 2, 13), connectEndpoints ? List.of(
         // merge 32->37 and 37->42 since they have same attrs
         feature(newLineString(16, 32, 21, 32), Map.of("group", "1")),
+        feature(newLineString(21, 32, 23.5, 32), Map.of("group", "2"))
+      ) : List.of(
+        feature(newMultiLineString(
+          newLineString(16, 32, 18.5, 32),
+          newLineString(18.5, 32, 21, 32)
+        ), Map.of("group", "1")),
         feature(newLineString(21, 32, 23.5, 32), Map.of("group", "2"))
       )
     )), sortListValues(results.tiles));
@@ -1305,8 +1355,9 @@ class PlanetilerTests {
     )), sortListValues(results.tiles));
   }
 
-  @Test
-  void testMergePolygons() throws Exception {
+  @ParameterizedTest
+  @ValueSource(booleans = {false, true})
+  void testMergePolygons(boolean unionOverlapping) throws Exception {
     var results = runWithReaderFeatures(
       Map.of("threads", "1"),
       List.of(
@@ -1337,19 +1388,97 @@ class PlanetilerTests {
       (in, features) -> features.polygon("layer")
         .setZoomRange(14, 14)
         .inheritAttrFromSource("group"),
-      (layer, zoom, items) -> FeatureMerge.mergeNearbyPolygons(
+      (layer, zoom, items) -> unionOverlapping ? FeatureMerge.mergeNearbyPolygons(
         items,
         0,
         0,
         1,
         1
-      )
+      ) : FeatureMerge.mergeMultiPolygon(items)
+    );
+
+    if (unionOverlapping) {
+      assertSubmap(sortListValues(Map.of(
+        TileCoord.ofXYZ(Z14_TILES / 2, Z14_TILES / 2, 14), List.of(
+          feature(rectangle(10, 10, 30, 20), Map.of("group", "1")),
+          feature(rectangle(10, 20.5, 20, 30), Map.of("group", "2"))
+        )
+      )), sortListValues(results.tiles));
+    } else {
+      assertSubmap(sortListValues(Map.of(
+        TileCoord.ofXYZ(Z14_TILES / 2, Z14_TILES / 2, 14), List.of(
+          feature(
+            newMultiPolygon(
+              rectangle(10, 10, 20, 20),
+              rectangle(20.5, 10, 30, 20)
+            ), Map.of("group", "1")),
+          feature(rectangle(10, 20.5, 20, 30), Map.of("group", "2"))
+        )
+      )), sortListValues(results.tiles));
+    }
+  }
+
+  @Test
+  void testCombineMultiPoint() throws Exception {
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1"),
+      List.of(
+        // merge same group:
+        newReaderFeature(z14Point(0, 0), Map.of("group", "1")),
+        newReaderFeature(newMultiPoint(
+          z14Point(1, 1),
+          z14Point(2, 2)
+        ), Map.of("group", "1")),
+        // don't merge - different group:
+        newReaderFeature(z14Point(3, 3), Map.of("group", "2"))
+      ),
+      (in, features) -> features.point("layer")
+        .setZoomRange(14, 14)
+        .setBufferPixels(0)
+        .inheritAttrFromSource("group"),
+      (layer, zoom, items) -> FeatureMerge.mergeMultiPoint(items)
     );
 
     assertSubmap(sortListValues(Map.of(
       TileCoord.ofXYZ(Z14_TILES / 2, Z14_TILES / 2, 14), List.of(
-        feature(rectangle(10, 10, 30, 20), Map.of("group", "1")),
-        feature(rectangle(10, 20.5, 20, 30), Map.of("group", "2"))
+        feature(newMultiPoint(
+          newPoint(0, 0),
+          newPoint(1, 1),
+          newPoint(2, 2)
+        ), Map.of("group", "1")),
+        feature(newPoint(3, 3), Map.of("group", "2"))
+      )
+    )), sortListValues(results.tiles));
+  }
+
+  @Test
+  void testReduceMaxPointBuffer() throws Exception {
+    var results = runWithReaderFeatures(
+      Map.of(
+        "threads", "1",
+        "max-point-buffer", "1"
+      ),
+      List.of(
+        newReaderFeature(z14Point(0, 0), Map.of("group", "1")),
+        newReaderFeature(newMultiPoint(
+          z14Point(-1, -1),
+          z14Point(-2, -2) // should get filtered out
+        ), Map.of("group", "1")),
+        // don't merge - different group:
+        newReaderFeature(z14Point(257, 257), Map.of("group", "2")),
+        newReaderFeature(z14Point(258, 258), Map.of("group", "3")) // filter out
+      ),
+      (in, features) -> features.point("layer")
+        .setZoomRange(14, 14)
+        .setBufferPixels(10)
+        .inheritAttrFromSource("group")
+    );
+
+    assertSubmap(sortListValues(Map.of(
+      TileCoord.ofXYZ(Z14_TILES / 2, Z14_TILES / 2, 14), List.of(
+        feature(newPoint(-1, -1), Map.of("group", "1")),
+        feature(newPoint(0, 0), Map.of("group", "1")),
+        feature(newPoint(257, 257), Map.of("group", "2"))
       )
     )), sortListValues(results.tiles));
   }
@@ -1617,7 +1746,11 @@ class PlanetilerTests {
   private static List<OsmElement> convertToOsmElements(OsmXml osmInfo) {
     List<OsmElement> elements = new ArrayList<>();
     for (var node : orEmpty(osmInfo.nodes())) {
-      elements.add(new OsmElement.Node(node.id(), node.lat(), node.lon()));
+      var newNode = new OsmElement.Node(node.id(), node.lat(), node.lon());
+      elements.add(newNode);
+      for (var tag : orEmpty(node.tags())) {
+        newNode.setTag(tag.k(), tag.v());
+      }
     }
     for (var way : orEmpty(osmInfo.ways())) {
       var readerWay = new OsmElement.Way(way.id());
@@ -1682,18 +1815,145 @@ class PlanetilerTests {
     assertEquals(8, results.tiles.size());
   }
 
+  @Test
+  void testIssue509LenaDelta() throws Exception {
+    OsmXml osmInfo = TestUtils.readOsmXml("issue_509_lena_delta.xml");
+    List<OsmElement> elements = convertToOsmElements(osmInfo);
+
+    var results = runWithOsmElements(
+      Map.of("threads", "1"),
+      elements,
+      (in, features) -> {
+        if (in.hasTag("natural", "water")) {
+          features.polygon("water").setAttr("id", in.id()).setMinZoom(10);
+        }
+      }
+    );
+
+    Map<Integer, Integer> counts = new TreeMap<>();
+    for (var tile : results.tiles().keySet()) {
+      counts.merge(tile.z(), 1, Integer::sum);
+    }
+
+    assertEquals(Map.of(
+      10, 39,
+      11, 125,
+      12, 397,
+      13, 1160,
+      14, 3108
+    ), counts);
+  }
+
+  @Test
+  void testIssue546Terschelling() throws Exception {
+    Geometry geometry = new WKBReader()
+      .read(
+        new InputStreamInStream(Files.newInputStream(TestUtils.pathToResource("issue_546_terschelling.wkb"))));
+    geometry = GeoUtils.worldToLatLonCoords(geometry);
+
+    assertNotNull(geometry);
+
+    // automatically checks for self-intersections
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1"),
+      List.of(
+        newReaderFeature(geometry, Map.of())
+      ),
+      (in, features) -> features.polygon("ocean")
+        .setBufferPixels(4.0)
+        .setMinZoom(0)
+    );
+
+
+    // this lat/lon is in the middle of an island and should not be covered by
+    for (int z = 4; z <= 14; z++) {
+      double lat = 53.391958;
+      double lon = 5.2438441;
+
+      var coord = TileCoord.aroundLngLat(lon, lat, z);
+      var problematicTile = results.tiles.get(coord);
+      if (z == 14) {
+        assertNull(problematicTile);
+        continue;
+      }
+      double scale = Math.pow(2, coord.z());
+
+      double tileX = (GeoUtils.getWorldX(lon) * scale - coord.x()) * 256;
+      double tileY = (GeoUtils.getWorldY(lat) * scale - coord.y()) * 256;
+
+      var point = newPoint(tileX, tileY);
+
+      assertEquals(1, problematicTile.size());
+      var geomCompare = problematicTile.getFirst().geometry();
+      geomCompare.validate();
+      var geom = geomCompare.geom();
+
+      assertFalse(geom.covers(point), "z" + z);
+    }
+  }
+
+  private static TileArchiveConfig.Format extractFormat(String args) {
+
+    final Optional<TileArchiveConfig.Format> format = Stream.of(TileArchiveConfig.Format.values())
+      .filter(fmt -> args.contains("--output-format=" + fmt.id()))
+      .findFirst();
+
+    if (format.isPresent()) {
+      return format.get();
+    } else if (args.contains("--output-format=")) {
+      throw new IllegalArgumentException("unhandled output format");
+    } else {
+      return TileArchiveConfig.Format.MBTILES;
+    }
+  }
+
+  private static TileCompression extractTileCompression(String args) {
+    if (args.contains("tile-compression=none")) {
+      return TileCompression.NONE;
+    } else if (args.contains("tile-compression=gzip")) {
+      return TileCompression.GZIP;
+    } else if (args.contains("tile-compression=")) {
+      throw new IllegalArgumentException("unhandled tile compression");
+    } else {
+      return TileCompression.GZIP;
+    }
+  }
+
   @ParameterizedTest
   @ValueSource(strings = {
     "",
     "--write-threads=2 --process-threads=2 --feature-read-threads=2 --threads=4",
-    "--emit-tiles-in-order=false",
     "--free-osm-after-read",
     "--osm-parse-node-bounds",
+    "--output-format=pmtiles",
+    "--output-format=csv",
+    "--output-format=tsv",
+    "--output-format=proto",
+    "--output-format=pbf",
+    "--output-format=json",
+    "--tile-compression=none",
+    "--tile-compression=gzip",
+    "--output-layerstats",
+    "--max-point-buffer=1"
   })
   void testPlanetilerRunner(String args) throws Exception {
     Path originalOsm = TestUtils.pathToResource("monaco-latest.osm.pbf");
-    Path mbtiles = tempDir.resolve("output.mbtiles");
     Path tempOsm = tempDir.resolve("monaco-temp.osm.pbf");
+    final TileCompression tileCompression = extractTileCompression(args);
+
+    final TileArchiveConfig.Format format = extractFormat(args);
+    final Path output = tempDir.resolve("output." + format.id());
+
+    final ReadableTileArchiveFactory readableTileArchiveFactory = switch (format) {
+      case MBTILES -> Mbtiles::newReadOnlyDatabase;
+      case CSV -> p -> InMemoryStreamArchive.fromCsv(p, ",");
+      case TSV -> p -> InMemoryStreamArchive.fromCsv(p, "\t");
+      case JSON -> InMemoryStreamArchive::fromJson;
+      case PMTILES -> ReadablePmtiles::newReadFromFile;
+      case PROTO, PBF -> InMemoryStreamArchive::fromProtobuf;
+    };
+
+
     Files.copy(originalOsm, tempOsm);
     Planetiler.create(Arguments.fromArgs(
       ("--tmpdir=" + tempDir.resolve("data") + " " + args).split("\\s+")
@@ -1703,6 +1963,8 @@ class PlanetilerTests {
         public void processFeature(SourceFeature source, FeatureCollector features) {
           if (source.canBePolygon() && source.hasTag("building", "yes")) {
             features.polygon("building").setZoomRange(0, 14).setMinPixelSize(1);
+          } else if (source.isPoint() && source.hasTag("place")) {
+            features.point("place").setZoomRange(0, 14);
           }
         }
       })
@@ -1710,7 +1972,7 @@ class PlanetilerTests {
       .addNaturalEarthSource("ne", TestUtils.pathToResource("natural_earth_vector.sqlite"))
       .addShapefileSource("shapefile", TestUtils.pathToResource("shapefile.zip"))
       .addGeoPackageSource("geopackage", TestUtils.pathToResource("geopackage.gpkg.zip"), null)
-      .setOutput("mbtiles", mbtiles)
+      .setOutput(output)
       .run();
 
     // make sure it got deleted after write
@@ -1718,9 +1980,9 @@ class PlanetilerTests {
       assertFalse(Files.exists(tempOsm));
     }
 
-    try (Mbtiles db = Mbtiles.newReadOnlyDatabase(mbtiles)) {
+    try (var db = readableTileArchiveFactory.create(output)) {
       int features = 0;
-      var tileMap = TestUtils.getTileMap(db);
+      var tileMap = TestUtils.getTileMap(db, tileCompression);
       for (var tile : tileMap.values()) {
         for (var feature : tile) {
           feature.geometry().validate();
@@ -1728,14 +1990,77 @@ class PlanetilerTests {
         }
       }
 
-      assertEquals(11, tileMap.size(), "num tiles");
-      assertEquals(2146, features, "num buildings");
-      assertSubmap(Map.of(
-        "planetiler:version", BuildInfo.get().version(),
-        "planetiler:osm:osmosisreplicationtime", "2021-04-21T20:21:46Z",
-        "planetiler:osm:osmosisreplicationseq", "2947",
-        "planetiler:osm:osmosisreplicationurl", "http://download.geofabrik.de/europe/monaco-updates"
-      ), db.metadata().getAll());
+      int expectedFeatures = args.contains("max-point-buffer=1") ? 2311 : 2313;
+
+      assertEquals(22, tileMap.size(), "num tiles");
+      assertEquals(expectedFeatures, features, "num feature");
+
+      final boolean checkMetadata = switch (format) {
+        case MBTILES -> true;
+        case PMTILES -> true;
+        default -> db.metadata() != null;
+      };
+
+      if (checkMetadata) {
+        assertSubmap(Map.of(
+          "planetiler:version", BuildInfo.get().version(),
+          "planetiler:osm:osmosisreplicationtime", "2021-04-21T20:21:46Z",
+          "planetiler:osm:osmosisreplicationseq", "2947",
+          "planetiler:osm:osmosisreplicationurl", "http://download.geofabrik.de/europe/monaco-updates"
+        ), db.metadata().toMap());
+      }
+    }
+
+    final Path layerstats = output.resolveSibling(output.getFileName().toString() + ".layerstats.tsv.gz");
+    if (args.contains("--output-layerstats")) {
+      assertTrue(Files.exists(layerstats));
+      byte[] data = Files.readAllBytes(layerstats);
+      byte[] uncompressed = Gzip.gunzip(data);
+      String[] lines = new String(uncompressed, StandardCharsets.UTF_8).split("\n");
+      assertEquals(33, lines.length);
+
+      assertEquals(List.of(
+        "z",
+        "x",
+        "y",
+        "hilbert",
+        "archived_tile_bytes",
+        "layer",
+        "layer_bytes",
+        "layer_features",
+        "layer_geometries",
+        "layer_attr_bytes",
+        "layer_attr_keys",
+        "layer_attr_values"
+      ), List.of(lines[0].split("\t")), lines[0]);
+
+      var mapper = new CsvMapper();
+      var reader = mapper
+        .readerFor(Map.class)
+        .with(CsvSchema.emptySchema().withColumnSeparator('\t').withLineSeparator("\n").withHeader());
+      try (var items = reader.readValues(uncompressed)) {
+        while (items.hasNext()) {
+          @SuppressWarnings("unchecked") Map<String, String> next = (Map<String, String>) items.next();
+          int z = Integer.parseInt(next.get("z"));
+          int x = Integer.parseInt(next.get("x"));
+          int y = Integer.parseInt(next.get("y"));
+          int hilbert = Integer.parseInt(next.get("hilbert"));
+          assertEquals(hilbert, TileCoord.ofXYZ(x, y, z).hilbertEncoded());
+          assertTrue(Integer.parseInt(next.get("z")) <= 14, "bad z: " + next);
+        }
+      }
+
+      // ensure tilestats standalone executable produces same output
+      var standaloneLayerstatsOutput = tempDir.resolve("layerstats2.tsv.gz");
+      TileSizeStats.main("--input=" + output, "--output=" + standaloneLayerstatsOutput);
+      byte[] standaloneData = Files.readAllBytes(standaloneLayerstatsOutput);
+      byte[] standaloneUncompressed = Gzip.gunzip(standaloneData);
+      assertEquals(
+        new String(uncompressed, StandardCharsets.UTF_8),
+        new String(standaloneUncompressed, StandardCharsets.UTF_8)
+      );
+    } else {
+      assertFalse(Files.exists(layerstats));
     }
   }
 
@@ -1760,7 +2085,7 @@ class PlanetilerTests {
       .addShapefileGlobSource("shapefile-glob-zip", resourceDir.resolve("shapefile.zip"), "*.shp")
       // Match *.shp within shapefile.zip
       .addShapefileSource("shapefile", resourceDir.resolve("shapefile.zip"))
-      .setOutput("mbtiles", mbtiles)
+      .setOutput(mbtiles)
       .run();
 
     try (Mbtiles db = Mbtiles.newReadOnlyDatabase(mbtiles)) {
@@ -1806,7 +2131,7 @@ class PlanetilerTests {
         }
       })
       .addGeoPackageSource("geopackage", TestUtils.pathToResource(inputFile), null)
-      .setOutput("mbtiles", mbtiles)
+      .setOutput(mbtiles)
       .run();
 
     try (Mbtiles db = Mbtiles.newReadOnlyDatabase(mbtiles)) {
@@ -1834,7 +2159,7 @@ class PlanetilerTests {
       .addNaturalEarthSource("ne", TestUtils.pathToResource("natural_earth_vector.sqlite"))
       .addShapefileSource("shapefile", TestUtils.pathToResource("shapefile.zip"))
       .addGeoPackageSource("geopackage", TestUtils.pathToResource("geopackage.gpkg.zip"), null)
-      .setOutput("mbtiles", tempDir.resolve("output.mbtiles"))
+      .setOutput(tempDir.resolve("output.mbtiles"))
       .run();
   }
 
@@ -1909,9 +2234,8 @@ class PlanetilerTests {
 
 
   private PlanetilerResults runForCompactTest(boolean compactDbEnabled) throws Exception {
-
     return runWithReaderFeatures(
-      Map.of("threads", "1", "compact-db", Boolean.toString(compactDbEnabled)),
+      Map.of("threads", "1", "mbtiles-compact", Boolean.toString(compactDbEnabled)),
       List.of(
         newReaderFeature(WORLD_POLYGON, Map.of())
       ),
@@ -2024,5 +2348,10 @@ class PlanetilerTests {
     int z8tiles = 1 << 8;
     assertFalse(polyResultz8.tiles.containsKey(TileCoord.ofXYZ(z8tiles * 3 / 4, z8tiles * 5 / 8, 8)));
     assertTrue(polyResultz8.tiles.containsKey(TileCoord.ofXYZ(z8tiles * 3 / 4, z8tiles * 7 / 8, 8)));
+  }
+
+  @FunctionalInterface
+  private interface ReadableTileArchiveFactory {
+    ReadableTileArchive create(Path p) throws IOException;
   }
 }
